--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-light fixed-top">
-          <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+          <a class="navbar-brand" href="#"><img src="../img/logo.png"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,8 +42,6 @@
             </ul>
           </div>
         </nav>
-      </div>
-      <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-sm-8 col-md-6 col-lg-5 mr-md-auto info-wrapper">
             <header>
@@ -54,6 +52,7 @@
           </div>
         </div>
       </div>
+    </div>
       <img class="mouse-icon" src="img/scroll.png">
     </header>
     <section class="about-us">
@@ -74,13 +73,13 @@
     <section class="our-services">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12 col-sm-12 col-md-6  btns-wrapper">
+          <div class="col-12 col-sm-12 col-md-6  btns-wrapper order-2 order-sm-2 order-md-1">
             <button class="btn"><span class="txt-btn">Online Shopping</span><span class="btn-label"><img src="img/icon-1.png" alt="" class="img-responsive"></span></button>
             <button class="btn"><span class="txt-btn">Quality Profuct</span><span class="btn-label"><img src="img/icon-2.png" alt="" class="img-responsive"></span></button>
             <button class="btn"><span class="txt-btn">Domestic &amp; intertional Delivery</span><span class="btn-label"><img src="img/icon-3.png" alt="" class="img-fluid"></span> </button>
             <button class="btn"><span class="txt-btn">Well Organized</span><span class="btn-label"><img src="img/icon-4.png" alt="" class="img-fluid"></span></button>
           </div>
-          <div class="col-12 col-sm-12 col-md-6 align-self-center our-services-wrapper">
+          <div class="col-8 col-sm-8 col-md-6 align-self-center our-services-wrapper order-1 order-sm-1 order-md-2">
             <h1>Our services</h1>
             
             <img src="img/img2.png" class="img-fluid d-block mx-auto "></img>
@@ -131,7 +130,7 @@
           <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error reiciendis molestias obcaecati quae temporibus odio.</small>
           <form>
             <div class="form-group row no-gutters justify-content-between">
-              <div class="col-sm-10 col-md-10 pr-md-3">
+              <div class="col-sm-9 col-md-10 pr-md-3">
                 <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Your email adress ">
               </div>
               <div class="col-12 col-sm-2 col-md-2 text-center">
@@ -178,7 +177,7 @@
       <div class="row mt-md-4 justify-content-center">
         <div class="col-md-5">
           <form>
-            <input class="form-control" type="text" placeholder="Default input">
+            <input class="form-control" type="text" placeholder="Your name...">
             <input class="form-control" type="email" placeholder="Your email...">
             <input class="form-control" type="phone" placeholder="Your phone number...">
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="8" placeholder="Your message..."></textarea>
@@ -211,9 +210,9 @@
 <footer>
   <div class="container-fluid">
     <div class="row text-center">
-      <div class="col-auto p-3"><p>2015 Company. All right reserved</p></div>
-      <div class="col-auto p-3"><img src="img/logo-small.png"></div>
-      <div class="col-auto p-3"><p>Made with <span>love</span> by Dave</p></div>
+      <div class="col-xs-12 col-sm-4 p-xs-0 p-sm-3"><p>2015 Company. All right reserved</p></div>
+      <div class="col-xs-12 col-sm-4 p-xs-0 p-sm-3"><img src="img/logo-small.png"></div>
+      <div class="col-xs-12 col-sm-4 p-xs-0 p-sm-3"><p>Made with <span>love</span> by Dave</p></div>
     </div>
   </div>
 </footer>
