--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-light fixed-top">
-          <a class="navbar-brand" href="#"><img src="../img/logo.png"></a>
+          <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="row mt-md-4 justify-content-center">
-        <div class="col-md-5">
+        <div class="col-10 col-md-5">
           <form>
             <input class="form-control" type="text" placeholder="Your name...">
             <input class="form-control" type="email" placeholder="Your email...">
