--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="responsive.css">
   </head>
   <body>
+    <div class="container-fluid">
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container">
@@ -60,7 +61,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 col-sm-8 col-md-6">
-                <img src="img/about-us.png" class="img-fluid"></img>
+                <img src="img/about-us.png" class="img-fluid">
               </div>
               <div class="col-12 col-sm-8 col-md-6 about-us-header ">
                 <h1>About&nbsp;Us</h1>
@@ -80,11 +81,11 @@
               </div>
               <div class="col-8 col-sm-8 col-md-6 align-self-center our-services-header order-1 order-sm-1 order-md-2">
                 <h1>Our services</h1>
-                <img src="img/img2.png" class="img-fluid d-block mx-auto "></img>
+                <img src="img/img2.png" class="img-fluid d-block mx-auto ">
               </div>
-            </div>
-            </div> <!-- END OF CONTAINER -->
-          </section>
+            </div>  
+          </div>   <!-- END OF CONTAINER -->
+        </section>
           <section id="gallery">
             <div class="container">
               <div class="row no-gutters">
@@ -263,5 +264,6 @@
             
             });
             </script>
+
           </body>
         </html>
