--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                   </div>
                   <div class="row pt-4 pb-4 text-center no-gutters  blog-imgs">
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-4">
                       <figure>
                         <div class="data">12<br>sep</div>
                         <figcaption>
@@ -168,7 +168,7 @@
                         <img src="img/blog-img-1.png" class="img-fluid">
                       </figure>
                     </div>
-                    <div class=" col-12 col-md-6 col-lg-4">
+                    <div class=" col-12 col-md-4">
                       <figure>
                         <div class="data">14<br>sep</div>
                         <figcaption>
@@ -177,7 +177,7 @@
                         <img src="img/blog-img-2.png" class="img-fluid">
                       </figure>
                     </div>
-                    <div class=" col-12 col-md-6 col-lg-4">
+                    <div class=" col-12 col-md-4">
                       <figure>
                         <div class="data">10<br>sep</div>
                         <figcaption>
