--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             if( target.length ) {
             event.preventDefault();
             $('html, body').animate({
-            scrollTop: target.offset().top
+            scrollTop: target.offset().top -78
             }, 1000);
             }
             });
