--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                 <img src="img/about-us.png" class="img-fluid">
               </div>
               <div class="col-12 col-sm-8 col-md-6 about-us-header ">
-                <h1>About&nbsp;Us</h1>
-                <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi praesentium delectus, id voluptate eligendi quos animi, non ipsam maiores eos tempora ex alias quod distinctio earum obcaecati sequi iste. Optio magni dolorem ad placeat tempore enim quasi animi reprehenderit omnis!</small>
+                <header>
+                  <h1>About&nbsp;Us</h1>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi praesentium delectus, id voluptate eligendi quos animi, non ipsam maiores eos tempora ex alias quod distinctio earum obcaecati sequi iste. Optio magni dolorem ad placeat tempore enim quasi animi reprehenderit omnis!</small>
+                </header>
               </div>
             </div>
           </div>
@@ -79,8 +81,10 @@
                 <button class="btn"><span class="txt-btn">Well Organized</span><span class="btn-label"><img src="img/icon-4.png" alt="" class="img-fluid"></span></button>
               </div>
               <div class="col-8 col-sm-8 col-md-6 align-self-center our-services-header order-1 order-sm-1 order-md-2">
-                <h1>Our services</h1>
-                <img src="img/img2.png" class="img-fluid d-block mx-auto ">
+                <header>
+                  <h1>Our services</h1>
+                  <img src="img/img2.png" class="img-fluid d-block mx-auto ">
+                </header>
               </div>
             </div>  
           </div>   <!-- END OF CONTAINER -->
@@ -89,7 +93,9 @@
             <div class="container">
               <div class="row no-gutters">
                 <div class="col-sm-12 col-md-8  gallery-header no-gutters text-center">
-                  <h1>Gallery</h1><small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem tempore ducimus, reiciendis similique pariatur, impedit cupiditate iste, facilis libero natus odio deleniti. Doloribus impedit praesentium in, blanditiis quam eum cupiditate.</small>
+                  <header>
+                    <h1>Gallery</h1><small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem tempore ducimus, reiciendis similique pariatur, impedit cupiditate iste, facilis libero natus odio deleniti. Doloribus impedit praesentium in, blanditiis quam eum cupiditate.</small>
+                  </header>
                 </div>
               </div>
               
@@ -133,8 +139,10 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-7 mr-md-auto subscribe-header">
-                    <h1>Subscribe To Us</h1>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error reiciendis molestias obcaecati quae temporibus odio.</small>
+                    <header>
+                      <h1>Subscribe To Us</h1>
+                      <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error reiciendis molestias obcaecati quae temporibus odio.</small>
+                    </header>
                     <form>
                       <div class="form-group row no-gutters justify-content-between">
                         <div class="col-sm-9 col-md-10 pr-md-3">
@@ -154,8 +162,10 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-12 col-sm-10 col-md-8 blog-header text-center">
-                      <h1>Blog</h1>
-                      <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolores dicta quo ab labore at voluptatem laborum fugit iste sapiente.</small>
+                      <header>
+                        <h1>Blog</h1>
+                        <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolores dicta quo ab labore at voluptatem laborum fugit iste sapiente.</small>
+                      </header>
                     </div>
                   </div>
                   <div class="row pt-4 pb-4 text-center no-gutters  blog-imgs">
@@ -196,8 +206,10 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-12 col-sm-10 col-md-6 contact-header text-center">
-                      <h1>Contact</h1>
-                      <small>For new ideas, project, buisness or anything you'd like to discuss, contact with me!</small>
+                      <header>
+                        <h1>Contact</h1>
+                        <small>For new ideas, project, buisness or anything you'd like to discuss, contact with me!</small>
+                      </header>
                     </div>
                   </div>
                   <div class="row mt-md-4 form-wrapper">
