--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+          <a class="navbar-brand" href="#"><img src="img/logo-min.png"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -60,7 +60,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 col-sm-8 col-md-6">
-                <img src="img/about-us.png" class="img-fluid">
+                <img src="img/about-us-min.png" class="img-fluid">
               </div>
               <div class="col-12 col-sm-8 col-md-6 about-us-header ">
                 <header>
@@ -75,15 +75,15 @@
           <div class="container">
             <div class="row">
               <div class="col-12 col-sm-12 col-md-6  btns-wrapper order-2 order-sm-2 order-md-1">
-                <button class="btn"><span class="txt-btn">Online Shopping</span><span class="btn-label"><img src="img/icon-1.png" alt="" class="img-responsive"></span></button>
-                <button class="btn"><span class="txt-btn">Quality Profuct</span><span class="btn-label"><img src="img/icon-2.png" alt="" class="img-responsive"></span></button>
-                <button class="btn"><span class="txt-btn">Domestic &amp; intertional Delivery</span><span class="btn-label"><img src="img/icon-3.png" alt="" class="img-fluid"></span> </button>
-                <button class="btn"><span class="txt-btn">Well Organized</span><span class="btn-label"><img src="img/icon-4.png" alt="" class="img-fluid"></span></button>
+                <button class="btn"><span class="txt-btn">Online Shopping</span><span class="btn-label"><img src="img/icon-1-min.png" alt="" class="img-responsive"></span></button>
+                <button class="btn"><span class="txt-btn">Quality Profuct</span><span class="btn-label"><img src="img/icon-2-min.png" alt="" class="img-responsive"></span></button>
+                <button class="btn"><span class="txt-btn">Domestic &amp; intertional Delivery</span><span class="btn-label"><img src="img/icon-3-min.png" alt="" class="img-fluid"></span> </button>
+                <button class="btn"><span class="txt-btn">Well Organized</span><span class="btn-label"><img src="img/icon-4-min.png" alt="" class="img-fluid"></span></button>
               </div>
               <div class="col-8 col-sm-8 col-md-6 align-self-center our-services-header order-1 order-sm-1 order-md-2">
                 <header>
                   <h1>Our services</h1>
-                  <img src="img/img2.png" class="img-fluid d-block mx-auto ">
+                  <img src="img/img2-min.png" class="img-fluid d-block mx-auto ">
                 </header>
               </div>
             </div>  
@@ -102,29 +102,29 @@
               <div class="row gallery-imgs">
                 <div class="row no-gutters">
                   <div class="col-12 col-md-8">
-                    <img src="img/peach.png" class="img-fluid d-block mx-auto">
+                    <img src="img/peach-min.png" class="img-fluid d-block mx-auto">
                   </div>
                   <div class="no-gutters col-12 col-sm-12 col-md-4 d-flex flex-wrap right-column  align-content-between  text-center  no-gutters" >
                     <div class="col-12 col-sm-6 col-md-12">
-                      <img src="img/blackberry.png" class="img-fluid">
+                      <img src="img/blackberry-min.png" class="img-fluid">
                     </div>
                     <div class=" col-12 col-sm-6 col-md-12  ">
-                      <img src="img/whortleberry.png" class="img-fluid">
+                      <img src="img/whortleberry-min.png" class="img-fluid">
                     </div>
                   </div>
                 </div>
                 <div class="row text-center  no-gutters">
                   <div class="col-12 col-sm-6 col-md-6">
-                    <img src="img/pomergranate.png" class="img-fluid">
+                    <img src="img/pomergranate-min.png" class="img-fluid">
                   </div>
-                  <div class="col-12 col-sm-6 col-md-6"><img src="img/water.png" class="img-fluid"></div>
+                  <div class="col-12 col-sm-6 col-md-6"><img src="img/water-min.png" class="img-fluid"></div>
                   <div class="collapse" id="ukryta-tresc">
                     <div class="card card-block">
                       <div class="row text-center  no-gutters">
                         <div class="col-12 col-sm-6 col-md-6">
-                          <img src="img/pomergranate.png" class="img-fluid">
+                          <img src="img/pomergranate-min.png" class="img-fluid">
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6"><img src="img/water.png" class="img-fluid"></div>
+                        <div class="col-12 col-sm-6 col-md-6"><img src="img/water-min.png" class="img-fluid"></div>
                       </div>
                     </div>
                   </div>
@@ -175,7 +175,7 @@
                         <figcaption>
                         <div class="caption"><p>Green Smoothies: To much of a Good Thing?</p></div>
                         </figcaption>
-                        <img src="img/blog-img-1.png" class="img-fluid">
+                        <img src="img/blog-img-1-min.png" class="img-fluid">
                       </figure>
                     </div>
                     <div class=" col-12 col-md-4">
@@ -184,7 +184,7 @@
                         <figcaption>
                         <div class="caption"><p>Green Smoothies: To much of a Good Thing?</p></div>
                         </figcaption>
-                        <img src="img/blog-img-2.png" class="img-fluid">
+                        <img src="img/blog-img-2-min.png" class="img-fluid">
                       </figure>
                     </div>
                     <div class=" col-12 col-md-4">
@@ -193,7 +193,7 @@
                         <figcaption>
                         <div class="caption"><p>Green Smoothies: To much of a Good Thing?</p></div>
                         </figcaption>
-                        <img src="img/blog-img-3.png" class="img-fluid">
+                        <img src="img/blog-img-3-min.png" class="img-fluid">
                       </figure>
                     </div>
                   </div>
@@ -248,7 +248,7 @@
                 <div class="container">
                   <div class="row text-center">
                     <div class="col-12 col-md-4  p-sm-2 p-md-4  "><p>2015 Company. All right reserved</p></div>
-                    <div class="col-12  col-md-4  p-sm-2 p-md-4 "><img src="img/logo-small.png"></div>
+                    <div class="col-12  col-md-4  p-sm-2 p-md-4 "><img src="img/logo-small-min.png"></div>
                     <div class="col-12 col-md-4  p-sm-2 p-md-4 "><p>Made with <span>love</span> by Dave</p></div>
                   </div>
                 </div>
