--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
 
                 but.onclick = function() {
 
-                  if(but.innerHTML=='VIEW MORE'){
-                  but.innerHTML = 'VIEW LESS';
+                  if(but.innerText=='VIEW MORE'){
+                  but.innerText = 'VIEW LESS';
                   } else {
-                    but.innerHTML = 'VIEW MORE';
+                    but.innerText = 'VIEW MORE';
                   }
                 }
 
