--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
           </div> <!-- END OF CONTAINER -->
           <img class="mouse-icon" src="img/scroll.png">
-          <img class="scroll scroll-animation" src="img/kółko.png">
+          <img class="scroll scroll-animation" src="img/k+-+éko-min.png">
         </header>
         <section id="about-us">
           <div class="container">
