--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
                  var window_y_position = window.pageYOffset; 
 
                 if (window_y_position > 50){
-                  document.getElementById('nav').classList.add('small');
+                  document.getElementById('nav').classList.add('small-navbar');
                 }
                 else {
-                  document.getElementById('nav').classList.remove('small');
+                  document.getElementById('nav').classList.remove('small-navbar');
                 }
               });
 
