--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
              });
               
                window.addEventListener('scroll', function() {
-                 var window_y_position = window.pageYOffset; 
+                 var pageYPosition = window.pageYOffset; 
 
-                if (window_y_position > 50){
+                if (pageYPosition > 50){
                   document.getElementById('nav').classList.add('small-navbar');
                 }
                 else {
