--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
                 var nav = document.getElementById('nav');
 
                 (pageYPosition > 50)
-                ? nav.classList.add('small')
-                : nav.classList.remove('small');
+                ? nav.classList.add('small-navbar')
+                : nav.classList.remove('small-navbar');
                 });
 
 
